fixed view on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -653,7 +653,7 @@ footer {
       margin: 0 auto;
     }
     p {
-      font-size: 20px;
+      font-size: 18px;
       width: 300px;
     }
   }
